<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="mpip.finki.ukim.mk.lab_intents.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/explicitActivity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/explicit"
            android:onClick="explicitActivityStart" />

        <Button
            android:id="@+id/implicitActivity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/implicit"
            android:onClick="implicitActivityStart" />

        <Button
            android:id="@+id/sendAction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send"
            android:onClick="sendContent" />

        <Button
            android:id="@+id/pictureAction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/picture"
            android:onClick="choosePicture" />


    </LinearLayout>

</android.support.constraint.ConstraintLayout>
